PLAT-848 Fix vertical alignment of items in horizontal EmfAdjacentNodeForm

--- a/platform-emf/src/main/resources/com/softicar/platform/emf/emf-form-style.css
+++ b/platform-emf/src/main/resources/com/softicar/platform/emf/emf-form-style.css
@@ -1,4 +1,8 @@
 
+.EmfAdjacentNodeForm > .DomBar {
+	align-items: flex-start;
+}
+
 .EmfForm {
 	display: grid;
 	flex-grow: 1;
